tests/ui/rfcs/rfc-2091-track-caller/error-with-naked.stderr
error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/error-with-naked.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^ the `track_caller` attribute is incompatible with `#[naked]`
LL |
LL | #[naked]
   | -------- function marked with `#[naked]` here

error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/error-with-naked.rs:18:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^ the `track_caller` attribute is incompatible with `#[naked]`
LL |
LL |     #[naked]
   |     -------- function marked with `#[naked]` here

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/error-with-naked.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/error-with-naked.rs:18:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0736, E0737.
For more information about an error, try `rustc --explain E0736`.
